feat: Add instructions update logic

--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,14 @@
-<div>
-    Hello World
-</div>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>팝업</title>
+    <script src="popup.js"></script>
+</head>
+<body>
+    <p>내 이름은 지훈</p>
+    <p>반말하기</p>
+    <button id="update">설정하기</button>
+</body>
+</html>
